@@ -184,7 +184,7 @@ def onMeetingAdded(meeting, event):
        portal_factory. Local roles defined on a meeting define who may view
        or edit it. But at the time the meeting is created in portal_factory,
        local roles are not defined yet. This can be a problem when some
-       workflow adaptations are enabled (ie, 'local_meeting_managers'). So here
+       workflow adaptations are enabled. So here
        we grant role 'Owner' to the currently logged user that allows him,
        in every case, to create the meeting.'''
     user = meeting.portal_membership.getAuthenticatedMember()
